--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,12 @@
 {
-  "installCommand":"npm install --legacy-peer-deps",
+  
   "version": 2,
   "builds":[{
-    "src": "server.js",
+    "src": "*.js",
     "use" : "@vercel/node"
-  },
-    {
-      "src" : "src/**/*",
-      "use" : "@vercel/static"
-    }],
+  }],
   "routes": [{
     "src": "/(.*)",
-    "dest": "server.js"
+    "dest": "/"
   }]
 }
