--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "anymatch": "^3.1.3",
     "array-flatten": "^1.1.1",
     "bcryptjs": "^2.4.3",
